--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
         canvasCtx = canvasEl.getContext("2d"),
         gapX = 10
 
+      const mouse = {
+        x: 0 , y: 0
+      }
       const field = {
         w: window.innerWidth,
         h: window.innerHeight,
@@ -40,23 +43,34 @@
 
       const leftPaddle = {
         x: gapX,
-        y: 100,
+        y: 0,
         w: line.w,
         h: 200,
+        _move: function(){
+          this.y = mouse.y - this.h / 2
+        },
+
         draw: function () {
           canvasCtx.fillStyle = "#ffffff"
           canvasCtx.fillRect(this.x, this.y, this.w, this.h)
+
+          this._move()
         },
       }
 
       const rightPaddle = {
         x: field.w - line.w - gapX,
-        y: 100,
+        y: 0,
         w: line.w,
         h: 200,
+        _move: function(){
+          this.y = ball.y
+        },
         draw: function () {
           canvasCtx.fillStyle = "#ffffff"
           canvasCtx.fillRect(this.x, this.y, this.w, this.h)
+
+          this._move()
         },
       }
 
@@ -74,14 +88,27 @@
       }
 
       const ball = {
-        x: 370,
-        y: 120,
+        x: 0,
+        y: 0,
         r: 20,
         speed: 5,
+        directionX: 1,
+        directionY: 1,
+        _calcPosition: function () {
+          if((this.y - this.r < 0 && this.directionY < 0) || (this.y > field.h - this.r && this.directionY > 0)){
+            this._reverseY()
+          }
+        },
 
+        _reverseY: function(){
+          this.directionY *= -1
+        },
+        _reverseX: function(){
+          this.directionX *= -1
+        },
         _move: function(){
-            this.x += 1 * this.speed
-            this.y += 1 * this.speed
+            this.x += this.directionX * this.speed
+            this.y += this.directionY * this.speed
         },
 
         draw: function () {
@@ -90,6 +117,7 @@
             canvasCtx.arc(this.x, this.y, this.r, 0, 2 * Math.PI, false)
             canvasCtx.fill()
             
+            this._calcPosition()
             this._move()
         },
       }
@@ -132,7 +160,10 @@
       
       setup()
       main()
-
+      canvasEl.addEventListener('mousemove' , function(e){
+        mouse.x = e.pageX
+        mouse.y = e.pageY
+      })
     </script>
   </body>
 </html>
